# upsclr-server

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: combined_state_handlers.rs  error.rs  handlers.rs  headers.rs  instance_manager.rs  ipc_models.rs  lib.rs  main.rs  main_old.rs  main_old2.rs  models.rs  plugin_ffi.rs  plugin_host_service.rs  plugin_manager.rs  rpc_ipc_framework.rs  rpc_ipc_framework2.rs  shutdown_signal.rs
src/ipc/: bootstrap.rs  mod.rs  transport.rs
src/main_process/: entrypoint.rs  mod.rs  plugin_host_client.rs  plugin_manager.rs
src/main_process/web/: app.rs  error.rs  extract_request_data.rs  handlers.rs  headers.rs  image_codec.rs  listeners.rs  mod.rs  models.rs
src/plugin_host/: entrypoint.rs  instance_manager.rs  mod.rs  plugin.rs  plugin_ffi.rs  plugin_host_impl.rs
src_old/: error.rs  handlers.rs  main.rs  models.rs
