[package]
name = "upsclr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
mime = "0.3"
socket2 = "0.5"
tokio = { version = "1", features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
libloading = "0.8"
image = { version = "0.25", features = [
  "bmp",
  "dds",
  "jpeg",
  "png",
  "qoi",
  "tga",
  "webp",
  "rayon",
], default-features = false }
headers = "0.4"
tower-http = { version = "0.6", features = ["trace", "limit", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ipc-channel = { version = "0.19", features = ["async"] }
tarpc = { version = "0.36", features = ["tokio1", "serde-transport", "tcp"] }
futures = "0.3"
tokio-serde = { version = "0.9", features = ["json"] }
bincode = { version = "2", features = ["serde"] }
base64 = "0.22"
