[package]
name = "upsclr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.8", features = [
  "http1",
  "http2",
  "json",
  "matched-path",
  "multipart",
  "original-uri",
  "tokio",
  "tower-log",
  "tracing",
  "form",
  "query",
] }
axum-extra = { version = "0.10", features = ["tracing", "typed-header"] }
mime = "0.3"
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
libloading = "0.8"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
headers = "0.4"
tower-http = { version = "0.6", features = ["trace", "limit", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
byteorder = "1"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
